[FIX] fixed mobile browes layout issue

--- a/assets/src/css/custom.css
+++ b/assets/src/css/custom.css
@@ -1,6 +1,6 @@
 body {
   color: #fff;  
-  background: linear-gradient(127deg, #eb87cdc7,#00ffe575);
+  background-image:linear-gradient(120deg, #eb87cdc7 0%, #00ffe575 100%);
   min-height:-webkit-fill-available;
 }
 .fixed-brand{
@@ -24,8 +24,6 @@ body {
     margin-top: 10px;
   }
   .process_img{
-/*        -webkit-animation: fa-spin 0.5s infinite linear;
-    animation: fa-spin 0.4s infinite linear;*/
     position: absolute;
     top: 3%;
     left: 40%;
